--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -34,28 +34,31 @@
    "source": [
     "from simulation import get_setup\n",
     "from plotting_tools import save_fig\n",
+    "from geometry import Context\n",
     "\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
     "\n",
     "plot_dir = 'plots/experiments'\n",
     "\n",
     "distance = 15\n",
-    "yaws = np.array([0, 15, 30])\n",
-    "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
+    "azimuth_deg = WALL_ANGLE_DEG_STEPPER #- 180\n",
+    "\n",
+    "context = Context.get_crazyflie_setup()\n",
+    "context.plot()\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
-    "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg-yaws[0])\n",
-    "[ax.scatter(*mic[:2], label=f'mic{i}, $\\\\theta=${azimuth_deg-yaws[0]}$^\\\\circ$', marker='x') for i, mic in enumerate(mic_positions)]\n",
-    "for yaw_deg in yaws[1:]:\n",
-    "    source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg-yaw_deg, ax=ax)\n",
-    "ax.set_title(f\"wall distance $d=${distance}cm and drone angles $\\\\theta$={yaws}deg\")\n",
+    "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg)\n",
+    "[ax.scatter(*mic[:2], label=f'mic{i}, $\\\\theta=${azimuth_deg}$^\\\\circ$') for i, mic in enumerate(mic_positions)]\n",
+    "\n",
+    "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg, ax=ax)\n",
+    "ax.set_title(f\"wall distance $d=${distance}cm and angle $\\\\theta=${azimuth_deg}degrees\")\n",
     "handles, labels = ax.get_legend_handles_labels()\n",
-    "h_mics = {l: h for h, l in zip(handles, labels) if '\\\\theta' in l}\n",
-    "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[.5, 0])\n",
+    "h_mics = {l.split(', $\\\\theta')[0]: h for h, l in zip(handles, labels) if '\\\\theta' in l}\n",
+    "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[0.3, 0])\n",
     "\n",
     "h_other = {l: h for h, l in zip(handles, labels) if not 'mic' in l}\n",
-    "ax.legend(h_other.values(), h_other.keys(),loc=\"lower left\", bbox_to_anchor=[.5, 0])\n",
+    "ax.legend(h_other.values(), h_other.keys(),loc=\"lower left\", bbox_to_anchor=[0.3, 0])\n",
     "ax.add_artist(l1)\n",
     "ax.set_xlabel(\"x [m]\")\n",
     "ax.set_ylabel(\"y [m]\")\n",
@@ -81,14 +84,12 @@
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"; # new buzzer\n",
     "#exp_name = \"2021_04_30_stepper\"; # new hardware\n",
-    "exp_name = \"2021_06_09_stepper\"; # new hardware, new sweep\n",
+    "#exp_name = \"2021_06_09_stepper\"; # new hardware, new sweep\n",
     "exp_name = \"2021_06_17_stepper\"; # new sweep\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
     "# fname = f'results/{exp_name}_real.pkl'\n",
-    "\n",
-    "exp_name = \"2021_06_17_stepper\"; # new sweep\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
     "motors = \"all45000\""
@@ -152,7 +153,8 @@
     "    im = ax.pcolormesh(df_dist, df_freq, df_matrix[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} pruned\")\n",
     "    ax_all.plot(df_freq, np.nanmean(df_matrix[mic_idx], axis=1), label=f'mic{mic_idx}')\n",
-    "    add_colorbar(fig, ax, im)"
+    "    add_colorbar(fig, ax, im)\n",
+    "    break"
    ]
   },
   {
@@ -170,7 +172,6 @@
    },
    "outputs": [],
    "source": [
-    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
     "from simulation import get_dist_slice_theory\n",
     "from copy import deepcopy\n",
     "from pandas_utils import fill_nans\n",
@@ -223,14 +224,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valid_freqs = df_freq\n",
     "for i, f in enumerate(df_freq):\n",
     "    slice_exp = df_matrix[:, i, :]\n",
     "    if np.any(np.isnan(slice_exp)):\n",
     "        slice_exp = fill_nans(slice_exp, df_dist)\n",
     "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=azimuth_deg).T\n",
     "\n",
-    "    fig_f  plot_ffts(\n",
+    "    fig_f = plot_ffts(\n",
     "        slice_exp=slice_exp,\n",
     "        slice_the=slice_the,\n",
     "        dist=df_dist,\n",
@@ -260,24 +260,51 @@
     "                                        rel_movement_cm, \n",
     "                                        mic, azimuth_deg=azimuth_deg) \n",
     "           for mic in range(4)}\n",
-    "print('factors:\\n', factors)\n",
-    "dN = df_dist[0] # starting distance of distance slice. \n",
+    "print('factors_max:\\n', factors)\n",
+    "dN = df_dist[0] # ending distance of distance slice. \n",
     "factors_min = {mic:factor_distance_to_delta(dN, \n",
     "                                        rel_movement_cm, \n",
     "                                        mic, azimuth_deg=azimuth_deg) \n",
     "               for mic in range(4)}\n",
     "print('factors_min:\\n', factors_min)\n",
+    "average = np.mean(list(factors.values())+list(factors_min.values()))\n",
+    "print('average', average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from inference import get_approach_angle_fft, get_gamma_distribution, get_approach_angle_cost\n",
+    "from plotting_tools import plot_performance, save_fig, titles, linestyles\n",
+    "from estimators import get_estimate, AngleEstimator\n",
+    "\n",
+    "plot_slices = False\n",
     "\n",
     "start_distances_grid = [max(df_dist) + i for i in [0, 10, 20]]\n",
-    "gammas_grid = np.arange(90)\n",
+    "gammas_grid = np.arange(1, 90, step=1)\n",
     "\n",
-    "factor = 2\n",
+    "factor = 2 #average #2\n",
     "gt_gamma = 90 # in degrees\n",
     "\n",
+    "fig, ax_total = plt.subplots()\n",
+    "ax_total.set_xlabel('approach angle $\\\\gamma$')\n",
+    "ax_total.set_ylabel('probability')\n",
+    "ax_total.set_title('combined distribution across mics and frequencies')\n",
+    "\n",
     "for algo in [\"cost\", \"bayes\"]:\n",
-    "    err_dict = {f\"mic{m}\": [np.nan]*len(df_freq) for m in range(df_matrix.shape[0])}\n",
+    "    \n",
+    "    estimator_all = AngleEstimator()\n",
+    "\n",
+    "    labels = [\"all mics\"] + [f\"mic{m}\" for m in range(df_matrix.shape[0])] \n",
+    "    err_dict = {l: [np.nan]*len(df_freq) for l in labels}\n",
     "    for i, f in enumerate(df_freq):\n",
-    "        print(f)\n",
+    "        estimator = AngleEstimator()\n",
+    "        \n",
     "        d_slices = fill_nans(df_matrix[:, i, :], df_dist)\n",
     "\n",
     "        if plot_slices:\n",
@@ -306,29 +333,40 @@
     "                    azimuth_deg=azimuth_deg\n",
     "                )  # is of shape n_start_distances x n_gammas_grid\n",
     "                gammas = gammas_grid\n",
-    "\n",
+    "                \n",
+    "            estimator_all.add_distribution(gammas, prob, mic_idx, f)\n",
+    "            estimator.add_distribution(gammas, prob, mic_idx, f)\n",
+    "                \n",
     "            gamma = get_estimate(gammas, prob)\n",
     "            err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "\n",
     "            if plot_slices:\n",
     "                ax.plot(gammas, prob)\n",
-    "                ax.axvline(gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
-    "                #ax.plot(ratios, prob_ratios)\n",
-    "                #ax.axvline(gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
+    "                ax.axvline(gamma, label=f'mic{mic_idx}, {algo}', color=f'C{mic_idx}', ls=linestyles[algo])\n",
     "\n",
     "        if plot_slices:\n",
     "            ax.set_title(f'frequency {f:.0f}Hz')\n",
     "            ax.set_xlabel('angle of approach $\\\\gamma$ [deg]')\n",
     "            ax.set_ylabel('probability')\n",
     "            ax.legend()\n",
+    "            \n",
+    "        angles, prob = estimator.get_angle_distribution()\n",
+    "        gamma = get_estimate(angles, prob)\n",
+    "        err_dict[\"all mics\"][i] = gamma - gt_gamma\n",
+    "            \n",
+    "    \n",
+    "    angles, prob = estimator_all.get_angle_distribution()\n",
+    "    ax_total.plot(angles, prob, label=algo)\n",
     "\n",
     "    fname = f\"{exp_name}_{motors}\"\n",
     "    fig, axs = plot_performance(err_dict, xs=df_freq, \n",
     "               xlabel=\"frequency [Hz]\", ylabel=\"error [deg]\")\n",
     "    fig.suptitle(titles[algo])\n",
-    "    axs[0, 1].set_xlim(0,  90)\n",
-    "    axs[0, 0].set_ylim(-90,  90)\n",
-    "    save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf', extension='png')"
+    "    axs[0, 1].set_xlim(0,  45)\n",
+    "    axs[0, 0].set_ylim(-45,  45)\n",
+    "    save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
+    "\n",
+    "ax_total.legend()"
    ]
   },
   {
@@ -430,11 +468,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_df_matrix, save_fig\n",
+    "from plotting_tools import plot_df_matrix, save_fig, titles\n",
     "\n",
     "min_freq = min(df_freq)\n",
     "max_freq = max(df_freq)\n",
