Debug buzzer sweep

--- a/notebooks/CleanupAnalysis.ipynb
+++ b/notebooks/CleanupAnalysis.ipynb
@@ -39,15 +39,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"2021_04_30_stepper\";   # new hardware\n",
+    "#exp_name = \"2021_04_30_stepper\";   # new hardware\n",
     "#exp_name = \"2021_06_09_stepper\";  # new hardware, new sweep\n",
+    "exp_name = \"2021_06_17_stepper\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"\n",
     "# new buzzer\n",
     "\n",
     "#mic_type = \"audio_deck\"\n",
-    "#motors = \"all45000\"\n",
-    "motors = 0\n",
+    "motors = \"all45000\"\n",
+    "#motors = 0\n",
     "\n",
     "source = \"sweep_new\"\n",
     "fname = f'plots/experiments/{exp_name}_{motors}'"
