--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -27,6 +27,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes for below experiments\n",
+    "\n",
+    "try frequency range with all-high gains, potentailly with smaller spacing. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -141,16 +150,17 @@
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import add_colorbar\n",
+    "from plotting_tools import add_colorbar, pcolorfast_custom\n",
     "\n",
     "fig, ax_all = plt.subplots()\n",
     "for mic_idx in range(4):\n",
     "    fig, ax = plt.subplots()\n",
-    "    im = ax.pcolormesh(df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
+    "    im = pcolorfast_custom(ax, df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
+    "    #im = ax.pcolormesh(df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} original\")\n",
     "    add_colorbar(fig, ax, im)\n",
     "    fig, ax = plt.subplots()\n",
-    "    im = ax.pcolormesh(df_dist, df_freq, df_matrix[mic_idx])\n",
+    "    im = pcolorfast_custom(ax, df_dist, df_freq_raw, df_matrix[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} pruned\")\n",
     "    ax_all.plot(df_freq, np.nanmean(df_matrix[mic_idx], axis=1), label=f'mic{mic_idx}')\n",
     "    add_colorbar(fig, ax, im)\n",
@@ -468,7 +478,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -721,11 +731,17 @@
     "eps = 1e-5\n",
     "split = False\n",
     "\n",
-    "chosen_methods = [\"raw\", \"calibration-individual\", \"theoretical\"]\n",
+    "chosen_methods = [\n",
+    "    \"raw\", \n",
+    "    \"calibration-individual\", \n",
+    "    \"calibration-global\", \n",
+    "    \"theoretical\"\n",
+    "]\n",
     "# chosen_methods = method_dict.keys()\n",
     "plot_combis = [\n",
     "    {\"distance\": 15, \"algorithm\": \"bayes\"},\n",
-    "    {\"distance\": 31, \"algorithm\": \"bayes\"},\n",
+    "    {\"distance\": 27, \"algorithm\": \"bayes\"},\n",
+    "    {\"distance\": 17, \"algorithm\": \"bayes\"},\n",
     "]\n",
     "\n",
     "for plot_combi in plot_combis:\n",
@@ -820,15 +836,18 @@
     "            ax_algo[i_mic].axvline(x=d, color=f\"C{i_method}\", ls=\":\") \n",
     "            ax_algo[i_mic].set_xlim(min(distances_here) - 1, max(distances_here) + 1)\n",
     "\n",
-    "        ax_algo[i_mic].axvline(x=distance, color=\"k\", ls=\":\")\n",
     "        axs_algo[0, i_mic].set_title(f\"mic{mic_idx}\")\n",
     "        axs_slice[0, i_mic].set_title(f\"mic{mic_idx}\")\n",
     "        \n",
     "    label_real = f\"real: {distance:.0f}cm\"\n",
-    "    ax_algo[i_mic].axvline(x=distance, color=\"k\", ls=\":\", label=label_real)\n",
     "    if not split:\n",
-    "        axs_slice[0, -1].legend()\n",
-    "        axs_algo[0, -1].legend()\n",
+    "        axs_slice[0, -1].legend(title=label_real, bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
+    "        axs_algo[0, -1].legend(title=label_real, bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
+    "        \n",
+    "    [ax.set_xlabel('frequency [Hz]') for ax in axs_slice[0, :]]\n",
+    "    [ax.set_ylabel('amplitude') for ax in axs_slice[0, :]]\n",
+    "    [ax.set_xlabel('distance [cm]') for ax in axs_algo[0, :]]\n",
+    "    [ax.set_ylabel('probability') for ax in axs_algo[0, :]]\n",
     "\n",
     "    fname_here = f\"{plot_dir}/{fname}_{distance}cm_raw_slices.png\"\n",
     "    save_fig(fig_slice, fname_here)\n",
@@ -856,7 +875,6 @@
     "            ls=all_linestyles[i_method],\n",
     "            label=method,\n",
     "        )\n",
-    "    ax_combi.axvline(x=distance, color=\"k\", ls=\":\", label=label_real)\n",
     "    ax_combi.set_xlabel(\"distance [cm]\")\n",
     "    ax_combi.set_ylabel(\"probability [-]\")\n",
     "    ax_combi.set_title(\"combined probability\")\n",
