--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -41,12 +41,13 @@
    "source": [
     "#exp_name = \"2021_04_30_stepper\";   # new hardware\n",
     "#exp_name = \"2021_06_09_stepper\";  # new hardware, new sweep\n",
-    "exp_name = \"2021_06_17_stepper\";  # new hardware, new sweep\n",
+    "#exp_name = \"2021_06_17_stepper\";  # new hardware, new sweep\n",
+    "exp_name = \"2021_06_19_stepper\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"\n",
     "# new buzzer\n",
     "\n",
-    "#mic_type = \"audio_deck\"\n",
+    "mic_type = \"audio_deck\"\n",
     "motors = \"all45000\"\n",
     "#motors = 0\n",
     "\n",
@@ -112,15 +113,18 @@
     "from plotting_tools import pcolorfast_custom, add_colorbar, save_fig\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 3)\n",
-    "im = pcolorfast_custom(ax, data.seconds, freqs, np.log10(spec[:, 0, :]), vmin=1e-5)\n",
+    "print(spec.shape)\n",
+    "print(spec[:, 0, :])\n",
+    "print(freqs)\n",
+    "im = pcolorfast_custom(ax, data.seconds, freqs[freqs>0], spec[freqs>0, 0, :])#, vmin=1e-5)\n",
     "add_colorbar(fig, ax, im)\n",
     "xticks = np.arange(0, max(data.seconds), step=5) \n",
     "ax.set_xticks(xticks)\n",
     "ax.set_xticklabels(xticks)\n",
-    "yticks = [3000, 4000, 5000]\n",
-    "ax.set_ylim(3000, 5000)\n",
-    "ax.set_yticks(yticks)\n",
-    "ax.set_yticklabels(yticks)\n",
+    "#yticks = [3000, 4000, 5000]\n",
+    "#ax.set_ylim(3000, 5000)\n",
+    "#ax.set_yticks(yticks)\n",
+    "#ax.set_yticklabels(yticks)\n",
     "ax.set_xlabel('time [s]')\n",
     "ax.set_ylabel('frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_spec.png')"
@@ -163,7 +167,7 @@
     "fig, axs = plt.subplots(1, matrix.shape[0])\n",
     "fig.set_size_inches(5 * matrix.shape[0], 5)\n",
     "for i in range(matrix.shape[0]):\n",
-    "    plot_df_matrix(dists, freqs, matrix[i], ax=axs[i])\n",
+    "    plot_df_matrix(dists, freqs[freqs>0], matrix[i, freqs>0, :], ax=axs[i])\n",
     "    axs[i].set_title(f\"mic{i}\")\n",
     "axs[0].set_ylabel('raw matrix\\n frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_raw_matrix.png')"
@@ -258,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_collector.remove_outliers(verbose=True)\n",
+    "#data_collector.remove_outliers(verbose=True)\n",
     "plot_current_df()"
    ]
   },
@@ -289,24 +293,28 @@
    "source": [
     "from data_collector import prune_df_matrix\n",
     "\n",
-    "matrix, dists, freqs = data_collector.get_df_matrix()\n",
-    "matrix_pruned, freqs_pruned, *_ = prune_df_matrix(matrix, freqs, ratio_missing_allowed=0.5)\n",
+    "matrix_cleaned, dists_cleaned, freqs_cleaned = data_collector.get_df_matrix()\n",
+    "matrix_pruned, freqs_pruned, *_ = prune_df_matrix(matrix_cleaned, freqs_cleaned, ratio_missing_allowed=0.5)\n",
     "\n",
-    "fig, axs = plt.subplots(1, matrix.shape[0])\n",
-    "fig.set_size_inches(5 * matrix.shape[0], 5)\n",
-    "for i in range(matrix.shape[0]):\n",
-    "    plot_df_matrix(dists, freqs, matrix[i], ax=axs[i])\n",
-    "    axs[i].set_title(f\"mic{i}\")\n",
+    "def plot_matrices(dists, freqs, matrix):\n",
+    "    fig, axs = plt.subplots(1, matrix.shape[0])\n",
+    "    fig.set_size_inches(5 * matrix.shape[0], 5)\n",
+    "    for i in range(matrix.shape[0]):\n",
+    "        plot_df_matrix(dists, freqs[freqs>0], matrix[i, freqs>0], ax=axs[i])\n",
+    "        axs[i].set_title(f\"mic{i}\")\n",
+    "    return fig, axs\n",
+    "\n",
+    "fig, axs = plot_matrices(dists, freqs, matrix)\n",
     "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_cleaned_matrix.png')\n",
     "\n",
-    "fig_pruned, axs_pruned = plt.subplots(1, matrix.shape[0])\n",
-    "fig_pruned.set_size_inches(5 * matrix.shape[0], 5)\n",
-    "for i in range(matrix.shape[0]):\n",
-    "    plot_df_matrix(dists, freqs_pruned, matrix_pruned[i], ax=axs_pruned[i])\n",
-    "    axs_pruned[i].set_title(f\"mic{i}\")\n",
-    "axs_pruned[0].set_ylabel('pruned matrix\\n frequency [Hz]')\n",
-    "save_fig(fig, f'{fname}_pruned_matrix.png')"
+    "fig, axs = plot_matrices(dists_cleaned, freqs_cleaned, matrix_cleaned)\n",
+    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
+    "save_fig(fig, f'{fname}_cleaned_matrix.png')\n",
+    "\n",
+    "fig, axs = plot_matrices(dists_cleaned, freqs_pruned, matrix_pruned)\n",
+    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
+    "save_fig(fig, f'{fname}_cleaned_matrix.png')"
    ]
   },
   {
@@ -325,7 +333,7 @@
     "\n",
     "if source == \"sweep_new\":\n",
     "    freqs = [2999, 3113, 3236, 3370, 3514, 3632, 3757, 3891, 3986, 4137, 4245, 4358, 4477, 4603, 4737, 4878]\n",
-    "    print('error between played and frequency bin:', freqs_buzzer - freqs)\n",
+    "    print('error between played and frequency bin:', freqs_buzzer - freqs_cleaned)\n",
     "\n",
     "plt.figure()\n",
     "[plt.plot([f, f], [1, 2], color='C0') for f in freqs_buzzer]\n",
