--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -94,14 +94,15 @@
     "#exp_name = \"2021_02_25_wall\"; # new buzzer\n",
     "#exp_name = \"2021_04_30_stepper\"; # new hardware\n",
     "#exp_name = \"2021_06_09_stepper\"; # new hardware, new sweep\n",
-    "exp_name = \"2021_06_17_stepper\"; # new sweep\n",
+    "#exp_name = \"2021_06_17_stepper\"; # new sweep\n",
+    "exp_name = \"2021_06_19_stepper\"; # new sweep, better pipeline\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
     "# fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
-    "motors = \"all45000\""
+    "motors = 0 #\"all45000\""
    ]
   },
   {
@@ -251,8 +252,7 @@
     "        dist=df_dist,\n",
     "    )\n",
     "    fname = f\"{exp_name}_{motors}\"\n",
-    "    save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')\n",
-    "    break"
+    "    save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')"
    ]
   },
   {
