Clean up analysis

--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -42,17 +42,19 @@
     "#exp_name = \"2021_04_30_stepper\";   # new hardware\n",
     "#exp_name = \"2021_06_09_stepper\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_06_17_stepper\";  # new hardware, new sweep\n",
-    "exp_name = \"2021_06_19_stepper\";  # new hardware, new sweep\n",
+    "#exp_name = \"2021_06_19_stepper\";  # new hardware, new sweep\n",
+    "exp_name = \"2021_07_08_stepper\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"\n",
     "# new buzzer\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
-    "motors = \"all45000\"\n",
+    "motors = 0 #\"all45000\"\n",
+    "snr = 6\n",
     "#motors = 0\n",
     "\n",
     "source = \"sweep_new\"\n",
-    "fname = f'plots/experiments/{exp_name}_{motors}'"
+    "fname = f'plots/experiments/{exp_name}_{motors}_{snr}'"
    ]
   },
   {
@@ -71,7 +73,9 @@
     "# get first distance measurement from the chosen datatype. \n",
     "all_data = pd.read_pickle(f'../experiments/{exp_name}/all_data.pkl')\n",
     "row_idx = 1\n",
-    "data = all_data.loc[(all_data.mic_type==mic_type) & (all_data.motors==motors)].iloc[row_idx]\n",
+    "data = all_data.loc[(all_data.mic_type==mic_type) & \n",
+    "                    (all_data.motors==motors) &\n",
+    "                    (all_data.snr==snr)].iloc[row_idx]\n",
     "data"
    ]
   },
@@ -81,11 +85,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from frequency_analysis import get_spectrogram_raw\n",
-    "print(data.seconds)\n",
-    "spec, freqs = get_spectrogram_raw(data.frequencies_matrix, data.stft)\n",
-    "spec = np.abs(spec)\n",
-    "print(spec.shape, freqs.shape)"
+    "print(data.frequencies_matrix.shape)\n",
+    "for i in range(data.frequencies_matrix.shape[0]):\n",
+    "    plt.figure()\n",
+    "    plt.title(f'sweep{i}')\n",
+    "    plt.scatter(range(data.frequencies_matrix.shape[1]), data.frequencies_matrix[i, :])\n",
+    "    plt.xlabel('time idx')\n",
+    "    plt.ylabel('chosen frequency [Hz]')"
    ]
   },
   {
@@ -94,10 +100,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from frequency_analysis import get_spectrogram_raw\n",
+    "spec, freqs = get_spectrogram_raw(data.frequencies_matrix, data.stft)\n",
     "fig, ax = plt.subplots()\n",
     "for i in range(spec.shape[2]):\n",
-    "    ax.plot(freqs[freqs>0], spec[freqs>0, 0, i])\n",
+    "    ax.scatter(freqs[freqs>0], spec[freqs>0, 0, i], label=f'sweep{i}')\n",
+    "    #ax.plot(freqs[freqs>0], spec[freqs>0, 0, i], label=f'sweep{i}')\n",
     "ax.set_yscale('log')\n",
+    "ax.legend()\n",
     "#ax.set_ylim(0.3, 10)\n",
     "ax.set_ylim(1e-3, 100)\n",
     "ax.set_xlabel('frequency [Hz]')\n",
@@ -113,10 +123,7 @@
     "from plotting_tools import pcolorfast_custom, add_colorbar, save_fig\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 3)\n",
-    "print(spec.shape)\n",
-    "print(spec[:, 0, :])\n",
-    "print(freqs)\n",
-    "im = pcolorfast_custom(ax, data.seconds, freqs[freqs>0], spec[freqs>0, 0, :])#, vmin=1e-5)\n",
+    "im = pcolorfast_custom(ax, data.seconds, freqs[freqs>0], np.abs(spec[freqs>0, 0, :]))#, vmin=1e-5)\n",
     "add_colorbar(fig, ax, im)\n",
     "xticks = np.arange(0, max(data.seconds), step=5) \n",
     "ax.set_xticks(xticks)\n",
@@ -127,7 +134,7 @@
     "#ax.set_yticklabels(yticks)\n",
     "ax.set_xlabel('time [s]')\n",
     "ax.set_ylabel('frequency [Hz]')\n",
-    "save_fig(fig, f'{fname}_spec.png')"
+    "#save_fig(fig, f'{fname}_spec.png')"
    ]
   },
   {
@@ -147,7 +154,7 @@
     "\n",
     "data_collector = DataCollector(exp_name, mic_type)\n",
     "backup_exists = data_collector.fill_from_backup(\n",
-    "    exp_name, mic_type, motors, appendix=\"_raw\"\n",
+    "    exp_name, mic_type, motors, snr, appendix=\"_raw\"\n",
     ")\n",
     "data_collector.remove_nan_rows(verbose=True)"
    ]
@@ -161,6 +168,7 @@
     "from plotting_tools import plot_df_matrix, save_fig\n",
     "\n",
     "print(data_collector.df)\n",
+    "print(data_collector.df.frequency.unique())\n",
     "\n",
     "matrix, dists, freqs = data_collector.get_df_matrix()\n",
     "print(matrix.shape, dists.shape, freqs.shape)\n",
@@ -169,8 +177,7 @@
     "for i in range(matrix.shape[0]):\n",
     "    plot_df_matrix(dists, freqs[freqs>0], matrix[i, freqs>0, :], ax=axs[i])\n",
     "    axs[i].set_title(f\"mic{i}\")\n",
-    "axs[0].set_ylabel('raw matrix\\n frequency [Hz]')\n",
-    "save_fig(fig, f'{fname}_raw_matrix.png')"
+    "axs[0].set_ylabel('raw matrix\\n frequency [Hz]')"
    ]
   },
   {
@@ -288,7 +295,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from data_collector import prune_df_matrix\n",
@@ -306,7 +315,7 @@
     "\n",
     "fig, axs = plot_matrices(dists, freqs, matrix)\n",
     "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
-    "save_fig(fig, f'{fname}_cleaned_matrix.png')\n",
+    "save_fig(fig, f'{fname}_raw_matrix.png')\n",
     "\n",
     "fig, axs = plot_matrices(dists_cleaned, freqs_cleaned, matrix_cleaned)\n",
     "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
@@ -314,13 +323,20 @@
     "\n",
     "fig, axs = plot_matrices(dists_cleaned, freqs_pruned, matrix_pruned)\n",
     "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
-    "save_fig(fig, f'{fname}_cleaned_matrix.png')"
+    "\n",
+    "save_fig(fig, f'{fname}_pruned_matrix.png')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
