--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -95,14 +95,18 @@
     "#exp_name = \"2021_04_30_stepper\"; # new hardware\n",
     "#exp_name = \"2021_06_09_stepper\"; # new hardware, new sweep\n",
     "#exp_name = \"2021_06_17_stepper\"; # new sweep\n",
-    "exp_name = \"2021_06_19_stepper\"; # new sweep, better pipeline\n",
+    "#exp_name = \"2021_06_19_stepper\"; # new sweep, better pipeline\n",
+    "#exp_name = \"2021_07_07_stepper\"; # new sweep, better pipeline\n",
+    "#exp_name = \"2021_07_08_stepper\"; # new sweep, better pipeline\n",
+    "exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
     "# fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
-    "motors = 0 #\"all45000\""
+    "motors = 0 #\"all45000\"\n",
+    "snr = 6"
    ]
   },
   {
@@ -117,7 +121,7 @@
     "from generate_df_results import data_collector_from_df\n",
     "\n",
     "data_collector = DataCollector()\n",
-    "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors)\n",
+    "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr)\n",
     "if not backup_exists: \n",
     "    print('generate data using script generate_df_results.')"
    ]
@@ -136,11 +140,56 @@
    "outputs": [],
    "source": [
     "from data_collector import prune_df_matrix\n",
+    "from plotting_tools import add_colorbar\n",
+    "import scipy\n",
     "\n",
-    "df_matrix_raw, df_dist, df_freq_raw = data_collector.get_df_matrix()\n",
-    "df_matrix, df_freq, indices = prune_df_matrix(\n",
-    "    df_matrix_raw, df_freq_raw, verbose=True, ratio_missing_allowed=0.8\n",
-    ")"
+    "kind = 'cubic' #'cubic' #'linear'\n",
+    "\n",
+    "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()\n",
+    "\n",
+    "for mic, df in data_collector.df.groupby('mic'):\n",
+    "    \n",
+    "    df = df.sort_values(['distance', 'frequency'], inplace=False)\n",
+    "    xnew = np.sort(df.distance.unique())\n",
+    "    ynew = np.sort(df.frequency.unique())\n",
+    "    \n",
+    "    df = df.assign(magnitude_norm=df.magnitude/df.groupby('frequency').magnitude.transform('median'))\n",
+    "    z_series = df.groupby(['frequency', 'distance']).magnitude_norm.median()\n",
+    "    z = z_series.values\n",
+    "    x = z_series.index.get_level_values('distance').values\n",
+    "    y = z_series.index.get_level_values('frequency').values\n",
+    "    interpolator2d = scipy.interpolate.interp2d(x, y, z, kind=kind)\n",
+    "\n",
+    "    znew = interpolator2d(xnew, ynew)\n",
+    "    znew[np.abs(znew) > 2] = 0\n",
+    "    plt.figure()\n",
+    "    for i in range(znew.shape[1]):\n",
+    "        plt.plot(znew[:, i])\n",
+    "\n",
+    "    znew_mat = znew.reshape((len(ynew), len(xnew)))\n",
+    "    fig, axs = plt.subplots(1, 3, sharey=True)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    ims = [''] * 3\n",
+    "    \n",
+    "    ims[0] = axs[0].pcolorfast(df_dist, df_freq, df_matrix[mic, :-1, :-1])\n",
+    "    axs[0].set_title('raw')\n",
+    "    \n",
+    "    ims[1] = axs[1].pcolorfast(xnew, ynew, znew_mat[:-1, :-1])\n",
+    "    axs[1].set_title(f'2d {kind} interpolation')\n",
+    "\n",
+    "    znew_mat = np.zeros((len(ynew), len(xnew)))\n",
+    "    for i, (distance, df_dist_here) in enumerate(df.groupby('distance')):\n",
+    "        x = df_dist_here.frequency.unique()\n",
+    "        y = df_dist_here.groupby('frequency').magnitude.median()\n",
+    "        interpolator1d = scipy.interpolate.interp1d(x, y, kind=kind, bounds_error=False, fill_value=np.nan)\n",
+    "        znew = interpolator1d(ynew)\n",
+    "        znew_mat[:, i] = znew\n",
+    "        \n",
+    "    ims[2] = axs[2].pcolorfast(xnew, ynew, znew_mat[:-1, :-1])\n",
+    "    axs[2].set_title(f'1d {kind} interpolation')\n",
+    "    \n",
+    "    [add_colorbar(fig, ax, im) for ax, im in zip(axs, ims)]\n",
+    "    break"
    ]
   },
   {
@@ -156,12 +205,13 @@
     "fig, ax_all = plt.subplots()\n",
     "for mic_idx in range(4):\n",
     "    fig, ax = plt.subplots()\n",
+    "    \n",
     "    im = pcolorfast_custom(ax, df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
     "    #im = ax.pcolormesh(df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} original\")\n",
     "    add_colorbar(fig, ax, im)\n",
     "    fig, ax = plt.subplots()\n",
-    "    im = pcolorfast_custom(ax, df_dist, df_freq_raw, df_matrix[mic_idx])\n",
+    "    im = pcolorfast_custom(ax, df_dist, df_freq, df_matrix[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} pruned\")\n",
     "    ax_all.plot(df_freq, np.nanmean(df_matrix[mic_idx], axis=1), label=f'mic{mic_idx}')\n",
     "    add_colorbar(fig, ax, im)\n",
@@ -219,8 +269,8 @@
     "        slice_the_norm = deepcopy(slice_the[m])\n",
     "        slice_exp_norm -= np.mean(slice_exp_norm)\n",
     "        slice_the_norm -= np.mean(slice_the_norm)\n",
-    "        slice_exp_norm /= np.std(slice_exp_norm)\n",
-    "        slice_the_norm /= np.std(slice_the_norm)\n",
+    "        #slice_exp_norm /= np.std(slice_exp_norm)\n",
+    "        #slice_the_norm /= np.std(slice_the_norm)\n",
     "        \n",
     "        axs_f[0, m].plot(dist, slice_the_norm, label=\"theoretical\")\n",
     "        axs_f[0, m].plot(dist, slice_exp_norm, label=\"measured\")\n",
@@ -241,18 +291,18 @@
     "        slice_exp = fill_nans(slice_exp, df_dist)\n",
     "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=azimuth_deg).T\n",
     "\n",
-    "    fig_f = plot_ffts(\n",
-    "        slice_exp=slice_exp,\n",
-    "        slice_the=slice_the,\n",
-    "        dist=df_dist,\n",
-    "    )\n",
+    "    #fig_f = plot_ffts(\n",
+    "    #    slice_exp=slice_exp,\n",
+    "    #    slice_the=slice_the,\n",
+    "    #    dist=df_dist,\n",
+    "    #)\n",
     "    fig_d = plot_slices(\n",
     "        slice_exp=slice_exp,\n",
     "        slice_the=slice_the,\n",
     "        dist=df_dist,\n",
     "    )\n",
     "    fname = f\"{exp_name}_{motors}\"\n",
-    "    save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')"
+    "    #save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')"
    ]
   },
   {
@@ -406,11 +456,11 @@
     "\n",
     "fig, axs = plt.subplots(1, 2, sharey=True)\n",
     "fig.set_size_inches(10, 5)\n",
-    "calib_function_median, freqs = get_calibration_function_median(exp_name, mic_type, ax=axs[0])\n",
+    "calib_function_median, freqs = get_calibration_function_median(exp_name, mic_type, snr=snr, ax=axs[0])\n",
     "axs[0].set_title(\"calibration-individual\")\n",
     "\n",
     "calib_function_median_one, freqs = get_calibration_function_median(\n",
-    "    exp_name, mic_type, ax=axs[1], fit_one_gain=True\n",
+    "    exp_name, mic_type, ax=axs[1], fit_one_gain=True, snr=snr\n",
     ")\n",
     "axs[1].set_title(\"calibration-global\")\n",
     "axs[1].set_ylabel('')\n",
@@ -427,13 +477,7 @@
     "from simulation import get_df_theory\n",
     "from data_collector import normalize_df_matrix\n",
     "\n",
-    "min_value = np.inf\n",
-    "max_value = -np.inf\n",
-    "\n",
     "chosen_mics = range(4)\n",
-    "\n",
-    "distances_grid = np.arange(min(df_dist), max(df_dist) + 1)\n",
-    "distances_idx = np.argmin(np.abs(distances_grid[:, None] - df_dist[None, :]), axis=0)\n",
     "\n",
     "results = pd.DataFrame(columns=[\"normalization\", \"matrix\", \"values\"])\n",
     "method_dict = {\n",
@@ -458,7 +502,7 @@
     "    if key == \"raw\":\n",
     "        df_norm = deepcopy(df_matrix)\n",
     "    elif key == \"theoretical\":\n",
-    "        df_norm = deepcopy(df_theory_pruned[:, :, distances_idx])\n",
+    "        df_norm = deepcopy(df_theory_pruned)\n",
     "    else:\n",
     "        df_norm, values = normalize_df_matrix(\n",
     "            df_matrix=df_matrix, freqs=df_freq, method=method\n",
@@ -469,8 +513,6 @@
     "        \"values\": values,\n",
     "    }\n",
     "    # print(key, data_type, df_norm.shape)\n",
-    "    min_value = min(min_value, -abs(np.min(df_norm)))\n",
-    "    max_value = max(max_value, abs(np.max(df_norm)))\n",
     "print('done')"
    ]
   },
@@ -693,7 +735,7 @@
     "        axs[0, 1].set_xlim(-1, max(distances))\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
-    "        save_fig(fig, fname_here)"
+    "        #save_fig(fig, fname_here)"
    ]
   },
   {
@@ -713,7 +755,7 @@
     "        fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
-    "        save_fig(fig, fname_here)"
+    "        #save_fig(fig, fname_here)"
    ]
   },
   {
@@ -850,9 +892,9 @@
     "    [ax.set_ylabel('probability') for ax in axs_algo[0, :]]\n",
     "\n",
     "    fname_here = f\"{plot_dir}/{fname}_{distance}cm_raw_slices.png\"\n",
-    "    save_fig(fig_slice, fname_here)\n",
+    "    #save_fig(fig_slice, fname_here)\n",
     "    fname_here = f\"{plot_dir}/{fname}_{distance}cm_raw_results.png\"\n",
-    "    save_fig(fig_algo, fname_here)\n",
+    "    #save_fig(fig_algo, fname_here)\n",
     "\n",
     "    fig_combi, axs_combi = plt.subplots(1, 2)\n",
     "    fig_combi.set_size_inches(6, 3)\n",
@@ -909,7 +951,7 @@
     "    plt.subplots_adjust(wspace=0.25)\n",
     "\n",
     "    fname_here = f\"{plot_dir}/{fname}_{distance}cm_raw_total.png\"\n",
-    "    save_fig(fig_combi, fname_here)"
+    "    #save_fig(fig_combi, fname_here)"
    ]
   },
   {
