Parse new datasets

--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -43,18 +43,18 @@
     "#exp_name = \"2021_06_09_stepper\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_06_17_stepper\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_06_19_stepper\";  # new hardware, new sweep\n",
-    "exp_name = \"2021_07_08_stepper\";  # new hardware, new sweep\n",
+    "#exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
+    "exp_name = \"2021_07_08_stepper_slow\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"\n",
     "# new buzzer\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
-    "motors = 0 #\"all45000\"\n",
-    "snr = 6\n",
-    "#motors = 0\n",
+    "motors = \"all45000\"\n",
+    "bin_selection = 5\n",
     "\n",
     "source = \"sweep_new\"\n",
-    "fname = f'plots/experiments/{exp_name}_{motors}_{snr}'"
+    "fname = f'plots/experiments/{exp_name}_{motors}_{bin_selection}'"
    ]
   },
   {
@@ -75,7 +75,7 @@
     "row_idx = 1\n",
     "data = all_data.loc[(all_data.mic_type==mic_type) & \n",
     "                    (all_data.motors==motors) &\n",
-    "                    (all_data.snr==snr)].iloc[row_idx]\n",
+    "                    (all_data.bin_selection==bin_selection)].iloc[row_idx]\n",
     "data"
    ]
   },
@@ -154,7 +154,7 @@
     "\n",
     "data_collector = DataCollector(exp_name, mic_type)\n",
     "backup_exists = data_collector.fill_from_backup(\n",
-    "    exp_name, mic_type, motors, snr, appendix=\"_raw\"\n",
+    "    exp_name, mic_type, motors, bin_selection, appendix=\"_raw\"\n",
     ")\n",
     "data_collector.remove_nan_rows(verbose=True)"
    ]
